# TemplateSSDUncleBob

./: .gitattributes  .gitignore  AGENTS.md  CHECKPOINTS.md  CLAUDE.md  LICENSE  README.md  feature_list.json  harness.config.json  harness.schema.json  init.ps1  init.sh  project-spec.md
.claude/: settings.json
.claude/agents/: a11y_seo_auditor.md  craftsman_lead.md  gherkin_author.md  judge.md  mentor.md  mutation_tester.md  security_reviewer.md  spec_partner.md  tdd_craftsman.md
.github/: AUTONOMOUS.md  CODEOWNERS
.github/workflows/: autonomous-evolve.yml  guard-sensitive-paths.yml  harness-ci.yml
.harness/: harness.mjs
.harness/adapters/: generic.md  go.md  java.md  node.md  python.md  rust.md
docs/: architecture.md  autonomous.md  configuration.md  conventions.md  gherkin.md  memoria-organizacional.md  mutation-testing.md  stack-adapter.md  tdd.md  tooling.md  verification.md  workflow.md
examples/go-notes-cli/: feature_list.json  go.mod  harness.config.json  project-spec.md
examples/node-notes-cli/: feature_list.json  harness.config.json  project-spec.md
examples/rust-notes-cli/: Cargo.toml  feature_list.json  harness.config.json  project-spec.md
examples/rust-notes-cli/features/: cli_since.feature
examples/rust-notes-cli/progress/: history.md  judge_since.md  mutation_since.md  tdd_since.md
examples/rust-notes-cli/src/: cli.rs  json.rs  lib.rs  main.rs  notes.rs  storage.rs
examples/rust-notes-cli/tools/: mutate.rs
progress/: current.md  history.md
scripts/: sync-memoria.ps1  sync-memoria.sh
tools/: mutate.py
(+30 files in other folders)
